[gd_scene load_steps=18 format=3 uid="uid://ctgu83ypdttse"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_80ysr"]
[ext_resource type="PackedScene" uid="uid://7spnfacotrv5" path="res://scenes/component/velocity_component/velocity_component.tscn" id="2_25rjh"]
[ext_resource type="PackedScene" uid="uid://b4kad2kuba1yn" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="3_iackg"]
[ext_resource type="PackedScene" uid="uid://3qjmkjv737j6" path="res://scenes/game_object/player/controller/controller.tscn" id="4_hbqme"]
[ext_resource type="PackedScene" uid="uid://l2n30mpbkdyw" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="4_ikdel"]
[ext_resource type="PackedScene" uid="uid://dfujh6qr0fr2t" path="res://scenes/ability/brake_ability/brake_controller.tscn" id="5_3fnfe"]
[ext_resource type="PackedScene" uid="uid://dxa63lby52pci" path="res://scenes/ui/player_ui/player_ui.tscn" id="7_15od0"]
[ext_resource type="PackedScene" uid="uid://bwxk255d7fh2x" path="res://scenes/ability/boost_ability/boost_controller.tscn" id="7_o7c0m"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3fje1"]
radius = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4sr6s"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_57e5n"]
material = SubResource("StandardMaterial3D_4sr6s")
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_77qy8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_856iv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_22qbk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nao43"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_32scs"]
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_r7qnk"]
material = SubResource("StandardMaterial3D_32scs")
size = Vector3(0.1, 0.1, 0.1)

[node name="Player" type="CharacterBody3D" groups=["player"]]
process_mode = 3
collision_layer = 0
script = ExtResource("1_80ysr")

[node name="VelocityComponent" parent="." instance=ExtResource("2_25rjh")]
max_speed = 5.0
max_overloaded_speed = 10.0

[node name="PlayerCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_3fje1")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="PhysicalOrigin" type="MeshInstance3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("BoxMesh_57e5n")
skeleton = NodePath("")

[node name="LeftController" parent="XROrigin3D" instance=ExtResource("4_hbqme")]
tracker = &"left_hand"

[node name="AbilityManager" parent="XROrigin3D/LeftController" index="1" node_paths=PackedStringArray("velocity_component")]
velocity_component = NodePath("../../../VelocityComponent")

[node name="GrabController" parent="XROrigin3D/LeftController/AbilityManager" index="3" node_paths=PackedStringArray("grab_area")]
grab_area = NodePath("../../GrabArea")

[node name="BrakeController" parent="XROrigin3D/LeftController/AbilityManager" index="4" instance=ExtResource("5_3fnfe")]

[node name="AbilityPanel" parent="XROrigin3D/LeftController" index="2" node_paths=PackedStringArray("gun_ability", "thruster_ability", "dash_ability")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.03, -0.02, 0.2)
gun_ability = NodePath("../AbilityManager/GunController")
thruster_ability = NodePath("../AbilityManager/ThrusterController")
dash_ability = NodePath("../AbilityManager/DashController")

[node name="ViewportQuad" parent="XROrigin3D/LeftController/AbilityPanel" index="0"]
material_override = SubResource("StandardMaterial3D_77qy8")

[node name="GunNuzzle" parent="XROrigin3D/LeftController" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.023, -0.015, -0.03)

[node name="GrabArea" parent="XROrigin3D/LeftController" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, -0.04, 0.08)

[node name="StateIdentifier" parent="XROrigin3D/LeftController" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.02, 0, 0.15)
material_override = SubResource("StandardMaterial3D_856iv")

[node name="LeftHand" parent="XROrigin3D/LeftController" instance=ExtResource("3_iackg")]

[node name="RightController" parent="XROrigin3D" instance=ExtResource("4_hbqme")]
tracker = &"right_hand"

[node name="AbilityManager" parent="XROrigin3D/RightController" index="1" node_paths=PackedStringArray("velocity_component")]
velocity_component = NodePath("../../../VelocityComponent")

[node name="GrabController" parent="XROrigin3D/RightController/AbilityManager" index="3" node_paths=PackedStringArray("grab_area")]
grab_area = NodePath("../../GrabArea")

[node name="BoostController" parent="XROrigin3D/RightController/AbilityManager" index="4" instance=ExtResource("7_o7c0m")]

[node name="AbilityPanel" parent="XROrigin3D/RightController" index="2" node_paths=PackedStringArray("gun_ability", "thruster_ability", "dash_ability")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03, -0.02, 0.2)
gun_ability = NodePath("../AbilityManager/GunController")
thruster_ability = NodePath("../AbilityManager/ThrusterController")
dash_ability = NodePath("../AbilityManager/DashController")

[node name="ViewportQuad" parent="XROrigin3D/RightController/AbilityPanel" index="0"]
material_override = SubResource("StandardMaterial3D_22qbk")

[node name="GunNuzzle" parent="XROrigin3D/RightController" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.025, -0.015, -0.03)

[node name="GrabArea" parent="XROrigin3D/RightController" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.04, -0.04, 0.08)

[node name="StateIdentifier" parent="XROrigin3D/RightController" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.02, 0, 0.15)
material_override = SubResource("StandardMaterial3D_nao43")

[node name="RightHand" parent="XROrigin3D/RightController" instance=ExtResource("4_ikdel")]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]

[node name="Neck" type="Node3D" parent="XROrigin3D/XRCamera3D"]

[node name="PlayerUI" parent="XROrigin3D/XRCamera3D" instance=ExtResource("7_15od0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.7)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.0
offset_right = 75.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Enter VR"

[node name="CharacterOrigin" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("BoxMesh_r7qnk")

[editable path="XROrigin3D/LeftController"]
[editable path="XROrigin3D/LeftController/AbilityPanel"]
[editable path="XROrigin3D/RightController"]
[editable path="XROrigin3D/RightController/AbilityPanel"]
